Updated popup spinner
• Updated:
- spinner.gif -> spinner.svg

--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -16,6 +16,6 @@
     }
 
     &__inner {
-        background: url(../assets/images/icons/spinner.gif) no-repeat center / 60px 60px;
+        background: url(../assets/images/icons/spinner.svg) no-repeat center / 60px 60px;
     }
 }
