--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -6,16 +6,15 @@
     min-width: 420px;
     min-height: 600px;
     overflow: hidden;
-    color: #000;
     background-color: #fff;
 
     * {
         display: block;
-        height: 600px;
-        width: 420px;
+        height: 100vh;
+        width: 100vw;
     }
 
     &__inner {
-        background: url(../assets/images/icons/spinner.svg) no-repeat center / 60px 60px;
+        background: url("../assets/images/icons/spinner.svg") no-repeat center / 60px 60px;
     }
 }
