Added Firefox option for showing window when sidebar unavailable
• Added:
- Firefox option for showing window when sidebar unavailable

--- a/src/views/options.pug
+++ b/src/views/options.pug
@@ -40,7 +40,10 @@ html
 							label(class='input-block-item no-select')
 								input(id='youtube-enabled' class='input-block-item__checkbox' type='checkbox' checked='')
 								| YouTube Enabled
-		
+							label(class='input-block-item no-select')
+								input(id='window-sidebar-enabled' class='input-block-item__checkbox' type='checkbox' checked='')
+								| Open new window when sidebar unavailable (Firefox only)
+								
 					//- BLOCK - Permissions
 					div(class='input-block')
 						div(class='input-block__meta no-select')
