Added commentBadge, disqusDissent toggle in options
• Added:
- commentBadge, disqusDissent toggle in options

--- a/src/views/options.pug
+++ b/src/views/options.pug
@@ -43,6 +43,12 @@ html
 							label(class='input-block-item no-select')
 								input(id='window-sidebar-enabled' class='input-block-item__checkbox' type='checkbox' checked='')
 								| Open new window when sidebar unavailable (Firefox only)
+							label(class='input-block-item no-select')
+								input(id='comment-badge-enabled' class='input-block-item__checkbox' type='checkbox' checked='')
+								| Comment Badge Enabled
+							label(class='input-block-item no-select')
+								input(id='disqus-dissent-enabled' class='input-block-item__checkbox' type='checkbox' checked='')
+								| Disqus Dissent Button Enabled
 								
 					//- BLOCK - Permissions
 					div(class='input-block')
