Updated options page split section widths
• Updated:
- options page split section widths

--- a/src/styles/components/options.scss
+++ b/src/styles/components/options.scss
@@ -152,7 +152,7 @@ html {
     &__items {
         display: inline-block;
         float: right;
-        min-width: 200px;
+        max-width: 260px;
 
         &--full {
             display: block;
@@ -172,7 +172,7 @@ html {
         &__items {
             display: block;
             float: none;
-            min-width: none;
+            max-width: none;
 
             &--full {
                 margin-top: 0;
