--- a/src/views/options.pug
+++ b/src/views/options.pug
@@ -41,6 +41,9 @@ html
 								input(id='youtube-enabled' class='input-block-item__checkbox' type='checkbox' checked='')
 								| YouTube Enabled
 							label(class='input-block-item no-select')
+								input(id='wikipedia-enabled' class='input-block-item__checkbox' type='checkbox' checked='')
+								| Wikipedia Enabled
+							label(class='input-block-item no-select')
 								input(id='window-sidebar-enabled' class='input-block-item__checkbox' type='checkbox' checked='')
 								| Open new window when sidebar unavailable (Firefox only)
 							label(class='input-block-item no-select')
