--- a/src/styles/components/newtab.scss
+++ b/src/styles/components/newtab.scss
@@ -773,23 +773,23 @@ html, body, main {
                 &:after {
                     content: none;
                 }
+            }
 
-                &:before {
-                    content: attr(data-badge);
-                    display: block;
-                    position: absolute;
-                    background-color: #f40e1c;
-                    top: -5px;
-                    right: -5px;
-                    line-height: 20px;
-                    min-width: 20px;
-                    height: 20px;
-                    border-radius: 10px;
-                    color: #fff;
-                    text-align: center;
-                    font-size: 10px;
-                    padding: 0 8px;
-                }
+            &.has-badge:before {
+                content: attr(data-badge);
+                display: block;
+                position: absolute;
+                background-color: #f40e1c;
+                top: -5px;
+                right: -5px;
+                line-height: 20px;
+                min-width: 20px;
+                height: 20px;
+                border-radius: 10px;
+                color: #fff;
+                text-align: center;
+                font-size: 10px;
+                padding: 0 8px;
             }
         }
     }
