Added new tab toggle in options page
Requests optional tabs permission on toggle if not already enabled

--- a/src/views/options.pug
+++ b/src/views/options.pug
@@ -52,6 +52,22 @@ html
 							label(class='input-block-item no-select')
 								input(id='disqus-dissent-enabled' class='input-block-item__checkbox' type='checkbox' checked='')
 								| Disqus Dissent Button Enabled
+							
+					//- BLOCK - New Tab
+					div(class='input-block')
+						div(class='input-block__meta no-select')
+							span(class='input-block__meta-title') New Tab Experience
+							span(class='input-block__meta-subtitle')
+								| The Dissenter New Tab Experience is a customizable landing page containing search, top sites, time and date.
+								br
+								| It also includes a custom Dissenter feed of popular URLs as well as your own notifications.
+								br
+								| By enabling this functionality, we request the "Tabs" permission in order to make this feature optional.
+						div(class='input-block__items')
+
+							label(class='input-block-item no-select')
+								input(id='custom-new-tab-enabled' class='input-block-item__checkbox' type='checkbox')
+								| Custom New Tab Enabled
 								
 					//- BLOCK - Permissions
 					div(class='input-block')
