Added "Tabs" permission description to options page

--- a/src/views/options.pug
+++ b/src/views/options.pug
@@ -78,6 +78,10 @@ html
 								b Active Tab:&nbsp;
 								| The "Active Tab" permission gives this extension temporary access to the currently active tab when the you invoke the extension.&nbsp;
 								| Access to the tab lasts while the you are on that page, and is revoked when the you navigates away or closes the tab.
+							p(class='input-block-item__paragraph')
+								b Tabs:&nbsp;
+								| The primary reason we request the "Tabs" permission is for this extension access to the current url you are at.
+								| We do this for a few reasons: 1. In order to display the comment badge on the icon. 2. To enable all Disqus comment sections to have a "View comments on Dissenter" button. 3. To enable the New Tab Experience.
 
 					//- BLOCK - Contact
 					div(class='input-block')
