Added disclaimer for browser support of new tab on options page
Only on Chrome, Firefox

--- a/src/views/options.pug
+++ b/src/views/options.pug
@@ -63,6 +63,8 @@ html
 								| It also includes a custom Dissenter feed of popular URLs as well as your own notifications.
 								br
 								| By enabling this functionality, we request the "Tabs" permission in order to make this feature optional.
+								br
+								| Only on browsers: Firefox and Chrome
 						div(class='input-block__items')
 
 							label(class='input-block-item no-select')
