Fixed newtab duckduckgo image
png -> svg

--- a/src/views/newtab.pug
+++ b/src/views/newtab.pug
@@ -139,7 +139,7 @@ html
                                     span(class="header-time-block__date text" id="header-date")
                                 
                             form(class="header-search-block" id="search-form" action="https://duckduckgo.com/?q" method="get")
-                                img(class="header-search-block__icon" id="search-input-icon" src="../assets/images/icons/duckduckgo.png")
+                                img(class="header-search-block__icon" id="search-input-icon" src="../assets/images/icons/duckduckgo.svg")
                                 input(id="search-input" name="q" class="header-search-block__input" type="text" placeholder="Search DuckDuckGo or type a URL")
                                 button(class="header-search-block__search-btn" type="submit")
                                     img(class="header-search-block__search-btn__icon" src="../assets/images/icons/search.svg" alt="Search")
